--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,18 @@
     <artifactId>OLC1-Proyecto2-202000510</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>java-cup-11b</groupId>
+            <artifactId>java-cup-11b</artifactId>
+            <version>1</version>
+        </dependency>
+        <dependency>
+            <groupId>jflex</groupId>
+            <artifactId>jflex</artifactId>
+            <version>1.4.3</version>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
